--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <!-- Contact -->
 <section id="contact">
-			<form action="https://formspree.io/{{ site.email }}" method="POST">
+			<form action="https://formspree.io/{{ site.email }}" method="POST" style="padding: 10 10 10 10;">
 				<div class="field half first">
 					<label for="name">Name</label>
 					<input type="text" name="name" id="name" />
