--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <!-- Contact -->
 <section id="contact">
-			<form action="https://formspree.io/{{ site.email }}" method="POST" style="margin: 50px 50px 50px 50px;">
+			<form action="https://formspree.io/{{ site.email }}" method="POST" style="margin-top: 10%; margin-left: 10%; margin-right: 10%; margin-bottom: 10%;">
 				<div class="field half first">
 					<label for="name">Name</label>
 					<input type="text" name="name" id="name" />
