--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,6 @@
 <!-- Contact -->
 <section id="contact">
+	<div id='inner'>
 			<form action="https://formspree.io/{{ site.email }}" method="POST" style="margin-top: 2.4%; margin-left: 10.5%; margin-right: 10.5%;">
 				<div class="field half first">
 					<label for="name">Name</label>
@@ -18,6 +19,7 @@
 					<li><input type="reset" value="Clear" /></li>
 				</ul>
 			</form>
+	</div>
 </section>
 
 <!-- Footer -->
