--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <!-- Contact -->
 <section id="contact">
 	<div class='inner'>
-			<form action="https://formspree.io/{{ site.email }}" method="POST" style="margin-top: 2.4%; margin-left: 10.5%; margin-right: 10.5%;">
+			<form action="https://formspree.io/{{ site.email }}" method="POST" style="margin-top: 2.4%; margin-left: 10.5%; margin-right: 10.5%; width: 190em!important; border-right: 0px!important;">
 				<div class="field half first">
 					<label for="name">Name</label>
 					<input type="text" name="name" id="name" />
