--- a/_sass/layout/_contact.scss
+++ b/_sass/layout/_contact.scss
@@ -58,12 +58,12 @@
 				> :nth-child(2n - 1) {
 					@include padding(4em, 0, (0, 0, 0, 0));
 					border-right: 0;
-					width: 100%;
+					width: 100%!important;
 				}
 
 				> :nth-child(2n) {
 					padding-left: 0;
-					width: 100%;
+					width: 100%!important;
 				}
 
 				> .split {
