--- a/_sass/layout/_contact.scss
+++ b/_sass/layout/_contact.scss
@@ -87,6 +87,7 @@
 			> .inner {
 				> :nth-child(2n - 1) {
 					@include padding(3em, 0, (0, 0, 0, 0));
+					width: 100%!important;
 				}
 			}
 		}
