--- a/_sass/components/_form.scss
+++ b/_sass/components/_form.scss
@@ -30,11 +30,14 @@
 		@include breakpoint(small) {
 			.field {
 				margin: 0 0 (_size(element-margin) * 0.75) 0;
+				width: 100%!important;
 
 				&.half {
+					width: 100%!important;
 					padding: 0 0 0 (_size(element-margin) * 0.75 * 0.5);
 
 					&.first {
+						width: 100%!important;
 						padding: 0 (_size(element-margin) * 0.75 * 0.5) 0 0;
 					}
 				}
